--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "date-fns": "^3.6.0",
     "roboto-fontface": "*",
     "vue": "^3.4.0",
+    "vue-draggable-next": "^2.2.1",
+    "vuedraggable": "^4.1.0",
     "vuetify": "^3.5.0"
   },
   "devDependencies": {
