--- a/package.json
+++ b/package.json
@@ -9,13 +9,25 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "axios": "^1.7.2",
     "core-js": "^3.34.0",
+    "date-fns": "^3.6.0",
+    "eslint-plugin-jest": "^28.11.0",
     "roboto-fontface": "*",
     "vue": "^3.4.0",
+    "vue-draggable-next": "^2.2.1",
+    "vuedraggable": "^4.1.0",
     "vuetify": "^3.5.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.7",
+    "@babel/preset-env": "^7.26.7",
+    "@babel/preset-typescript": "^7.26.0",
+    "@types/jest": "^29.5.14",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/vue3-jest": "^29.2.6",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -23,12 +35,17 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.22.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.71.1",
     "unplugin-fonts": "^1.1.1",
     "unplugin-vue-components": "^0.26.0",
     "unplugin-vue-router": "^0.8.4",
     "vite": "^5.1.5",
     "vite-plugin-vuetify": "^2.0.3",
+    "vitest": "^3.0.4",
     "vue-router": "^4.3.0"
   }
 }
